# aero

./: .gitignore  AGENT.md  AGENTS.md  README.md  caen1.qgz  geolib.py  logging.py  macropython.py  microtyping.py  pyproject.toml  run.sh  run_debug.sh  run_local.sh  run_remote.sh  test.ipynb  zarr_test.py  zarrzip_test2.py  zones.geojson
.github/: copilot-instructions.md
devtools/: clean_sdcard.py  clean_sdcard.sh  cleanup_code.sh  convert_to_zarr.py  init_venv.sh  list_sdcard.sh  make_sample.zarr.sh  make_sample.zarr_big.sh  zarr_to_grid.py
experiments/: caen1.qgz  zones.geojson
macropython/: Dockerfile
microzarr/: __init__.py  data_zarr.json  microzarr.py
src/: geojson.py  geolib.py  lru_cache.py  microtyping.py  ulogging.py  zarr_run.py  zarr_test.py  zarr_tester.py
src/macropython/: debug.py  micropython.py
src/microzarr/: __init__.py  microzarr.py  xy_zarr.json
tests/: AGENTS.md  conftest.py  geodata_dump.py  micropython.py  test_geolib.py  test_microzarr.py  utest.py
tests_dataviz/: test_azimuth_negative.geojson  test_azimuth_project_consistency.geojson  test_azimuth_roundtrip.geojson  test_calc_bbox_simple.geojson  test_convexpoly_left_right_rotations.geojson  test_convexpoly_left_right_square.geojson  test_find_idx_left_bottom_and_top.geojson  test_project_consistency.geojson  test_project_zero_distance.geojson  test_sidesegmentinterpolator_x_at_y.geojson  test_sidesemgentinterpolator_x_at_y.geojson
typings/: __builtins__.pyi  _thread.pyi  cmath.pyi  framebuf.pyi  gc.pyi  heapq.pyi  io.pyi  json.pyi  lcd160cr.pyi  machine.pyi  math.pyi  micropython.pyi  network.pyi  os.pyi  pyb.pyi  random.pyi  select.pyi  stm.pyi  struct.pyi  sys.pyi  time.pyi  uarray.pyi  ubinascii.pyi  ucollections.pyi  uctypes.pyi  uerrno.pyi  uhashlib.pyi  uheapq.pyi  ujson.pyi  umachine.pyi  uos.pyi  urandom.pyi  uselect.pyi  usocket.pyi  usys.pyi  utime.pyi  uzlib.pyi  zlib.pyi
typings/_mpy_shed/: IRQs.pyi  __init__.pyi  blockdevice.pyi  buffer_mp.pyi  io_modes.pyi  io_mp.pyi  mp_implementation.py  time_mp.pyi
typings/_mpy_shed/collections/: __init__.pyi
typings/micropython_stm32_pybv11_stubs-1.20.0.post6.dist-info/: RECORD
typings/stdlib/: _ast.pyi  _codecs.pyi  _collections_abc.pyi  _decimal.pyi  array.pyi  builtins.pyi  enum.pyi  io.pyi  re.pyi  sre_constants.pyi  ssl.pyi  struct.pyi  types.pyi  typing.pyi  typing_extensions.pyi
typings/stdlib/_typeshed/: __init__.pyi  dbapi.pyi  wsgi.pyi
typings/stdlib/asyncio/: __init__.pyi  base_events.pyi  base_tasks.pyi  coroutines.pyi  events.pyi  format_helpers.pyi  futures.pyi  locks.pyi  mixins.pyi  proactor_events.pyi  protocols.pyi  runners.pyi  sslproto.pyi  staggered.pyi  streams.pyi  tasks.pyi  threads.pyi  timeouts.pyi  trsock.pyi
typings/stdlib/collections/: __init__.pyi
typings/stdlib/json/: __init__.pyi
typings/stdlib/os/: __init__.pyi
typings/stdlib/sys/: __init__.pyi
typings/stubs/mypy-extensions/: mypy_extensions.pyi
typings/uasyncio/: __init__.pyi  core.pyi  event.pyi  funcs.pyi  lock.pyi  stream.pyi  task.pyi
