
[project]
name = "aero"
version = "0.0.0"
requires-python = ">=3.12"
dependencies = [
    "click>=8.2.1",
    "fiona>=1.10.1",
    "rasterio>=1.4.3",
    "requests>=2.32.4",
]

[dependency-groups]
dev = [
  "pyright>=1.1.403",
  "pylint>=3.3.7",
  "isort>=6.0.1",
  "black>=25.1.0",
  "debugpy>=1.8.16",
]


[tool.pyright]
typeCheckingMode = "basic"
stubPath = "typings"
typeshedPaths = ["typings"]
reportMissingModuleSource = false

executionEnvironments = [
  { root = "devtools", pythonVersion = "3.12" },
  { root = "src", pythonVersion = "3.10" },
]

ignore = ["typings"]

[tool.black]
line-length = 120

[tool.isort]
profile = "black"

[tool.pylint.main]
ignore-patterns = ".ipynb"
ignore = ["typings", "venv", ".venv"]
source-roots = ["src", "devtools"]

[tool.pylint.format]
max-line-length = 150

[tool.pylint."messages control"]

# https://pylint.pycqa.org/en/latest/user_guide/messages/messages_overview.html#fatal-category
disable = [
  "not-context-manager",
  "missing-module-docstring",
  "missing-function-docstring",
  "missing-class-docstring",
  "wrong-import-order",
  "wildcard-import",
  "unused-wildcard-import",
  "use-implicit-booleaness-not-comparison",
  "no-else-return",
  "too-many-locals",
  "too-many-arguments",
  "too-few-public-methods",
  "unspecified-encoding",
  "global-statement",
]

[tool.pylint.typecheck]
# Modules that should not be considered as standard library modules
ignored-modules = ["time", "gc", "sys", "micropython"]
# Additional built-in functions that are available globally
additional-builtins = ["const", "micropython"]
