[project]
name = "aero"
version = "0.0.0"
requires-python = ">=3.12"
dependencies = [
    "click>=8.3.1",
    "fiona>=1.10.1",
    "rasterio>=1.5.0",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
  "pytest>=9.0.2",
  "pyright>=1.1.408",
  "pylint>=4.0.5",
  "isort>=8.0.1",
  "black>=26.3.1",
  "debugpy>=1.8.20",
  "geopandas>=1.1.3",
  "matplotlib>=3.10.8",
  "jupyter>=1.1.1",
  "mutmut>=3.5.0",
]

[tool.uv]
package = true


[tool.pyright]
typeCheckingMode = "basic"
stubPath = "typings"
reportMissingModuleSource = false

executionEnvironments = [
  { root = "devtools", pythonVersion = "3.12" },
  { root = "tests", pythonVersion = "3.12" },
  { root = "src", pythonVersion = "3.10" },
]

ignore = ["typings"]

[tool.black]
line-length = 120

[tool.isort]
profile = "black"

[tool.pylint.main]
ignore-patterns = ".ipynb"
ignore = ["typings", "venv", ".venv", "mutants"]

[tool.pylint.format]
max-line-length = 150

[tool.pylint."messages control"]

# https://pylint.pycqa.org/en/latest/user_guide/messages/messages_overview.html#fatal-category
disable = [
  "not-context-manager",
  "missing-module-docstring",
  "missing-function-docstring",
  "missing-class-docstring",
  "wrong-import-order",
  "wildcard-import",
  "unused-wildcard-import",
  "use-implicit-booleaness-not-comparison",
  "no-else-return",
  "too-many-locals",
  "too-many-arguments",
  "too-few-public-methods",
  "too-many-instance-attributes",
  "unspecified-encoding",
  "global-statement",
]

[tool.pylint.typecheck]
# Modules that should not be considered as standard library modules
ignored-modules = ["time", "gc", "sys", "micropython"]
# Additional built-in functions that are available globally
additional-builtins = ["const", "micropython"]

[tool.mutmut]
paths_to_mutate = ["src/"]
